kube/nginx_nodesvc.yml
apiVersion: v1
kind: Service
metadata:
  name: calc-node-svc
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31010
